feat: RAG竞争壁垒5阶段优化